Renamed the Result to RunResult, and added logging of timing of simulation runs and statistics