@@ -1,6 +1,6 @@
 package dk.gormkrings.statistics;
 
-import dk.gormkrings.result.IResult;
+import dk.gormkrings.result.IRunResult;
 import dk.gormkrings.result.ISnapshot;
 import dk.gormkrings.simulation.data.Date;
 import dk.gormkrings.simulation.result.Snapshot;
@@ -34,16 +34,19 @@ public class SimulationAggregationService {
      *   3) For the remaining runs, mark snapshots as failed only from the snapshot that first fails (and onward).
      *   4) Group snapshots by year and build yearly summaries.
      */
-    public List<YearlySummary> aggregateResults(List<IResult> results) {
-        // Step 1: Process each simulation run (no failure marking).
+    public List<YearlySummary> aggregateResults(List<IRunResult> results) {
+        long startTime = System.currentTimeMillis();
+        // Step 1: Process each simulation run.
         List<SimulationRunData> simulationDataList = new ArrayList<>();
-        for (IResult result : results) {
+        for (IRunResult result : results) {
             simulationDataList.add(processRun(result));
         }
+        long processTime = System.currentTimeMillis();
+        log.info("Process each simulation run in {} ms", processTime - startTime);
 
         // Step 2: Compute quantile thresholds over final effective capitals.
         List<Double> finals = simulationDataList.stream()
-                .map(runData -> runData.finalEffectiveCapital())
+                .map(SimulationRunData::finalEffectiveCapital)
                 .collect(Collectors.toList());
         double lowerThreshold = quantile(finals, lowerThresholdPercentile);
         double upperThreshold = quantile(finals, upperThresholdPercentile);
@@ -57,7 +60,7 @@ public class SimulationAggregationService {
         // Step 3: For each filtered run, mark snapshots as failed only from the first failing snapshot onward.
         List<SimulationRunData> markedSimulationData = filteredSimulationData.stream()
                 .map(this::markFailures)
-                .collect(Collectors.toList());
+                .toList();
 
         // Step 4: Group all DataPoints (snapshots) from the marked simulation runs by year.
         Map<Integer, List<DataPoint>> dataByYear = new HashMap<>();
@@ -67,24 +70,20 @@ public class SimulationAggregationService {
             }
         }
 
-        // Build yearly summaries using the grouped datapoints.
+        startTime = System.currentTimeMillis();
         List<YearlySummary> summaries = new ArrayList<>();
-        for (Map.Entry<Integer, List<DataPoint>> entry : dataByYear.entrySet()) {
-            int year = entry.getKey();
-            // Assume that within the same year, snapshots share the same phaseName.
-            String phaseName = entry.getValue().get(0).phaseName();
-            List<DataPoint> rawDataPoints = entry.getValue();
-            List<Double> capitals = rawDataPoints.stream()
-                    .map(dp -> dp.capital())
-                    .collect(Collectors.toList());
-            List<Boolean> failed = rawDataPoints.stream()
-                    .map(dp -> dp.runFailed())
-                    .collect(Collectors.toList());
-            YearlySummary summary = summaryCalculator.calculateYearlySummary(phaseName, year, capitals, failed);
-            summaries.add(summary);
-        }
 
-        // Sort the yearly summaries and compute the year-to-year growth.
+        buildYearlySummaries(dataByYear, summaries);
+
+        long summaryBuildTime = System.currentTimeMillis();
+        log.info("Built yearly summaries in {} ms", summaryBuildTime - startTime);
+
+        sortComputeGrowth(summaries);
+
+        return summaries;
+    }
+
+    private void sortComputeGrowth(List<YearlySummary> summaries) {
         summaries.sort(Comparator.comparingInt(YearlySummary::getYear));
         for (int i = 1; i < summaries.size(); i++) {
             YearlySummary previous = summaries.get(i - 1);
@@ -96,16 +95,31 @@ public class SimulationAggregationService {
                 current.setCumulativeGrowthRate(0.0);
             }
         }
-
-        return summaries;
     }
 
-    /**
-     * Processes a simulation run (IResult) by iterating through its snapshots once.
-     * This method collects snapshots into DataPoints without marking any failure.
-     * The final effective capital is taken from the last snapshot.
-     */
-    private SimulationRunData processRun(IResult result) {
+    private void buildYearlySummaries(Map<Integer, List<DataPoint>> dataByYear, List<YearlySummary> summaries) {
+        int counter = 0;
+        for (Map.Entry<Integer, List<DataPoint>> entry : dataByYear.entrySet()) {
+            counter++;
+            int year = entry.getKey();
+            String phaseName = entry.getValue().getFirst().phaseName();
+            List<DataPoint> rawDataPoints = entry.getValue();
+            List<Double> capitals = rawDataPoints.stream()
+                    .map(DataPoint::capital)
+                    .collect(Collectors.toList());
+            List<Boolean> failed = rawDataPoints.stream()
+                    .map(DataPoint::runFailed)
+                    .collect(Collectors.toList());
+
+            long startTime = System.currentTimeMillis();
+            YearlySummary summary = summaryCalculator.calculateYearlySummary(phaseName, year, capitals, failed);
+            long calculateSummary = System.currentTimeMillis();
+            log.info("Calculate {}/{} yearly summaries in {} ms", counter, dataByYear.size(), calculateSummary - startTime);
+            summaries.add(summary);
+        }
+    }
+
+    private SimulationRunData processRun(IRunResult result) {
         double finalEffectiveCapital = 0.0;
         List<DataPoint> dataPoints = new ArrayList<>();
         for (ISnapshot snap : result.getSnapshots()) {
@@ -114,49 +128,37 @@ public class SimulationAggregationService {
                     .plusDays(state.getTotalDurationAlive())
                     .getYear();
             double capital = state.getCapital();
-            // Initially, do not mark run failure; record snapshot as is.
             dataPoints.add(new DataPoint(capital, false, year, state.getPhaseName()));
             finalEffectiveCapital = capital;
         }
         return new SimulationRunData(finalEffectiveCapital, dataPoints);
     }
 
-    /**
-     * For a given simulation run, mark snapshots (on a snapshot level) as failed only from the first
-     * snapshot that fails (outside the "Deposit" phase with capital <= 0) and for all following snapshots.
-     * Snapshots before the failure event remain unchanged.
-     */
     private SimulationRunData markFailures(SimulationRunData runData) {
         boolean failureOccurred = false;
         List<DataPoint> updatedDataPoints = new ArrayList<>();
         for (DataPoint dp : runData.dataPoints()) {
+            DataPoint e = new DataPoint(0, true, dp.year(), dp.phaseName());
             if (!failureOccurred) {
                 // Check if this snapshot should trigger failure.
                 if (!"Deposit".equalsIgnoreCase(dp.phaseName()) && dp.capital() <= 0) {
                     failureOccurred = true;
                     // Mark this snapshot as failed.
-                    updatedDataPoints.add(new DataPoint(0, true, dp.year(), dp.phaseName()));
+                    updatedDataPoints.add(e);
                 } else {
                     updatedDataPoints.add(dp);
                 }
             } else {
                 // Once failure has occurred, mark all subsequent snapshots as failed.
-                updatedDataPoints.add(new DataPoint(0, true, dp.year(), dp.phaseName()));
+                updatedDataPoints.add(e);
             }
         }
         double updatedFinalCapital = updatedDataPoints.isEmpty() ? 0 :
-                updatedDataPoints.get(updatedDataPoints.size()-1).capital();
+                updatedDataPoints.getLast().capital();
         return new SimulationRunData(updatedFinalCapital, updatedDataPoints);
     }
 
-    /**
-     * Holds the computed final effective capital and associated datapoints for a simulation run.
-     */
     private record SimulationRunData(double finalEffectiveCapital, List<DataPoint> dataPoints) {}
 
-    /**
-     * DataPoint holds a capital value, a flag indicating if that snapshot (or its run, from that point onward)
-     * is marked as failed, the associated year, and the phase name.
-     */
     private record DataPoint(double capital, boolean runFailed, int year, String phaseName) {}
 }
